After added app. to operationIds in swagger.yaml
