# swagger_server/controllers/words_controller.py
@@ -5,7 +5,7 @@ from swagger_server.models.words import Words  # noqa: E501
 from swagger_server import util
 
 
-def find_words_by_name(term):  # noqa: E501
+def app_find_words_by_name(term):  # noqa: E501
     """Find Words by name
 
     Returns all words, which have the term in their name # noqa: E501
@@ -18,7 +18,7 @@ def find_words_by_name(term):  # noqa: E501
     return 'do some magic!'
 
 
-def find_words_by_status(status):  # noqa: E501
+def app_find_words_by_status(status):  # noqa: E501
     """Finds Words by status
 
     Multiple status values can be provided with comma separated strings # noqa: E501
@@ -31,7 +31,7 @@ def find_words_by_status(status):  # noqa: E501
     return 'do some magic!'
 
 
-def get_words_to_learn(limit=None, status=None):  # noqa: E501
+def app_get_words_to_learn(limit=None, status=None):  # noqa: E501
     """Get words to learn
 
     Returns number of words to learn # noqa: E501
